@startuml inline_umlgraph_1.png
!pragma layout elk
node "Blabby" {
    node "Core" {
        component UPnPAV as upnpav{
            [ServiceDiscovery]
            [MediaDevice]
        }

        component Multimedia as media {
            [Provider]
            [Multimedia]
            [Renderer]

            [Renderer] --> [MediaDevice]
            [Renderer] --> [ServiceDiscovery]

            [Multimedia] --> [Provider]
        }

    }

    node "Shell" {
        component Shell as shell
        shell --> [Multimedia]
        shell --> [Renderer]
        shell --> [Provider]
    }

    node "Plugins" {
        component Provider as provider{
            [MediaServerProvider]
            [FileSystemProvider]

            [MediaServerProvider] --> [Provider]
            [MediaServerProvider] --> [MediaDevice]
            [MediaServerProvider] --> [ServiceDiscovery]
            [FileSystemProvider] --> [Provider]
        }
    }
}
@enduml
@startuml inline_umlgraph_2.png
!pragma layout elk
node "Multimedia"{
    node "Provider"{
        interface Provider
        class ProviderLoader
        class MediaSource
        class MediaItem 
        class ProviderModel

        class ProviderLoader {
            void loadProvider(QStringList providerFolders);
            std::shared_pointer<ProviderModel> providerModel();
        }

        class Provider {
            QString name();
            Version verion();
            QVector<std::shared_pointer<MediaSource> sources();
            sourceAdded(std::shared_pointer<MediaSource> source);
            sourceRemoved(std::shared_pointer<MediaSource> source);
        }

        class MediaSource{
            QString name();
            MediaItemModel model();
            std::optional<Icon> icon();
        }

        class MediaItem{
            QString name();
            std::optional<Icon> icon();
            QUrl url();
            Type type();
        }

        ProviderLoader --> Provider : creates
        ProviderLoader "1" o-- "1" ProviderModel 
        Provider "1" o-- "1..*" MediaSource
        MediaSource "1" o-- "*" MediaItem
    }

    node Multimedia {

    }

    node Renderer {

    }
}
@enduml
